# datanugget

./: 10_metrics.py  11_read_csv.py  12_knn_classifier.py  14_naive_bayes.py  15_gmm_kmeans.py  16_lwr.py  4_linear_regression.py  6_correlation.py  8_train_test_split.py  9_scatter_plot.py  README.md  __init__.py  index.txt  pyproject.toml  test.py
.github/workflows/: publish.yml
datanugget/: 13_perceptron.py  17_entropy.py  18_nn_and.py  1_pca.py  2_svm_linear.py  3_logistic_regression.py  5_confusion_matrix.py  7_mean_std_median.py
datanugget.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
