[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "datanugget"
version = "0.0.2"
description = "A collection of ML and data analysis code snippets"
readme = "README.md"
requires-python = ">=3.7"
authors = [{name = "Aswath Msc", email = "aswath@example.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/aswathmsc/datanugget"

[tool.setuptools.packages.find]
where = ["."]
include = ["datanugget*"]
